# Deadmod

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  README.md  SECURITY.md  TESTING.md  graph.html  graph.json  modules.dot  package-lock.json  test_graph.html
.claude/: settings.local.json
deadmod-cli/: Cargo.toml
deadmod-cli/.deadmod/: cache.json
deadmod-cli/src/: main.rs
deadmod-core/: Cargo.toml
deadmod-core/.deadmod/: cache.json
deadmod-core/src/: builder.rs  cache.rs  config.rs  detect.rs  error.rs  fix.rs  graph.rs  lib.rs  logging.rs  parse.rs  prelude.rs  report.rs  root.rs  scan.rs  tests.rs  visualize.rs  visualize_html.rs  visualize_pixi.rs  workspace.rs
deadmod-core/src/callgraph/: extractor.rs  graph.rs  mod.rs  path_resolver.rs  usage.rs
deadmod-core/src/common/: graph_trait.rs  mod.rs  path_builder.rs  visibility.rs
deadmod-core/src/constants/: const_extractor.rs  const_graph.rs  const_usage.rs  mod.rs
deadmod-core/src/enums/: enum_extractor.rs  enum_graph.rs  enum_usage.rs  mod.rs
deadmod-core/src/func/: func_calls.rs  func_extractor.rs  func_graph.rs  mod.rs
deadmod-core/src/generics/: generic_extractor.rs  generic_graph.rs  generic_usage.rs  mod.rs
deadmod-core/src/macros/: macro_extractor.rs  macro_graph.rs  macro_usage.rs  mod.rs
deadmod-core/src/matcharms/: match_extractor.rs  match_graph.rs  match_usage.rs  mod.rs
deadmod-core/src/traits/: mod.rs  trait_extractor.rs  trait_graph.rs  trait_usage.rs
deadmod-lsp/: Cargo.toml
deadmod-lsp/.deadmod/: cache.json
deadmod-lsp/src/: main.rs
deadmod-vscode/: package.json
deadmod-vscode/src/: extension.ts
