[package]
name = "deadmod-cli"
version = "0.1.0"
edition = "2021"
description = "NASA-grade dead module detector CLI for Rust"

[[bin]]
name = "deadmod"
path = "src/main.rs"

[dependencies]
deadmod-core = { path = "../deadmod-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
serde_json = "1"
