[package]
name = "deadmod-core"
version = "0.1.0"
edition = "2021"
description = "NASA-grade dead module detection library for Rust"

[features]
default = ["fix", "html", "pixi", "callgraph"]
# Auto-fix functionality to remove dead code
fix = []
# HTML visualization output
html = []
# WebGL/PixiJS visualization (larger binary size)
pixi = []
# Function call graph analysis
callgraph = []
# All optional features
full = ["fix", "html", "pixi", "callgraph"]

[dependencies]
anyhow = "1"
thiserror = "1"
walkdir = "2"
rayon = "1"
petgraph = "0.6"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
sha2 = "0.10"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
