[package]
name = "deadmod-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP server for deadmod - real-time dead module detection"

[[bin]]
name = "deadmod-lsp"
path = "src/main.rs"

[dependencies]
deadmod-core = { path = "../deadmod-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"
